upgrade to spacebase v4.0.0

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: default
   </div>
   <div class="content-over-image">
     <h1 class="logo">spaceBase</h1>
-    <p>v 3.0.1</p>
-    <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v3.0.1.zip">Download</a><p>
+    <p>v 4.0.0</p>
+    <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v4.0.0.zip">Download</a><p>
     <p class="github"><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
   </div>
 </section>
@@ -42,7 +42,7 @@ layout: default
     <ul class="grid-wrapper">
       <li class="grid hand-one-half lap-one-quarter">
         <img src="images/mobile.png" alt="mobile phone" />
-        <span class="h3">Mobile-first Grid</span>
+        <span class="h3">Mobile-first Flexbox Grid</span>
       </li>
       <li class="grid hand-one-half lap-one-quarter">
         <img src="images/sass.png" alt="sass" />
@@ -66,7 +66,7 @@ layout: default
       <li>Common UI components</li>
       <li>Helper classes and mixins</li>
       <li>Cross-browser form controls</li>
-      <li>Supports modern browsers including IE8+</li>
+      <li>Supports modern browsers including IE10+</li>
     </ul>
   </div>
 </section>
@@ -82,7 +82,7 @@ layout: default
       <div class="grid lap-one-half">
         <div class="right padding">
           <ol class="numbers">
-            <li><pre>$ npm install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v3.0.1.zip">download the ZIP</a> and copy its contents into your project folder.</li>
+            <li><pre>$ npm install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v4.0.0.zip">download the ZIP</a> and copy its contents into your project folder.</li>
             <li>Use your favorite Sass compiler to watch changes and compile the files.</li>
             <li>Open scss/_vars.scss to make changes to your global variables.</li>
             <li>Start building out your HTML. We've included index.html and <a href="styleguide.html">styleguide.html</a> to begin with.</li>
@@ -150,7 +150,7 @@ layout: default
   </div>
 </section>
 <section class="download">
-  <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v3.0.1.zip">Download spaceBase</a><p>
+  <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v4.0.0.zip">Download spaceBase</a><p>
 </section>
 <section class="contribute">
   <div class="container">
