--- a/styleguide.html
+++ b/styleguide.html
@@ -72,6 +72,20 @@ title: spaceBase Style Guide
         </div>
       </div>
       <div class="grid">
+        <h3 class="sg-heading">Auto Sizing</h3>
+        <div class="grid-wrapper">
+          <div class="grid  shrink">
+            <p class="sg-demo-block">5.1</p>
+          </div>
+          <div class="grid  auto">
+            <p class="sg-demo-block">5.2</p>
+          </div>
+          <div class="grid  auto">
+            <p class="sg-demo-block">5.3</p>
+          </div>
+        </div>
+      </div>
+      <div class="grid">
         <h3 class="sg-heading">Push</h3>
         <div class="grid-wrapper">
           <div class="grid  one-quarter  push--one-quarter">
@@ -177,8 +191,6 @@ title: spaceBase Style Guide
     <h4>h4.Heading 4</h4>
     <h5>h5.Heading 5</h5>
     <h6>h6.Heading 6</h6>
-  </div>
-  <div class="sg-landmark">
     <div class="grid-wrapper">
       <div class="grid lap-one-third">
         <h3 class="sg-heading">Unordered List</h3>
@@ -325,57 +337,57 @@ title: spaceBase Style Guide
     <form>
       <div class="grid-wrapper">
         <div class="grid lap-one-third">
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="text1">Text Input</label>
             <input type="text" placeholder="Text Input" id="text1" class="form-control">
           </div>
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="text2">Readonly Text Input</label>
             <input type="text" placeholder="Readonly Text Input" id="text2" readonly class="form-control">
           </div>
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="text3">Disabled Text Input</label>
             <input type="text" placeholder="Disabled Text Input" id="text3" disabled class="form-control">
           </div>
-          <div class="sg-field-container has-error">
+          <div class="form-group has-error">
             <label class="error">Error Input</label>
             <input type="text" placeholder="Text Input" id="error" class="form-control">
           </div>
-          <div class="sg-field-container has-success">
+          <div class="form-group has-success">
             <label class="success">Valid</label>
             <input type="text" placeholder="Text Input" id="success" class="form-control">
           </div>
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="password">Password</label>
             <input type="password" placeholder="Type your Password" id="password" class="form-control">
           </div>
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="email">Email Address</label>
             <input type="email" placeholder="name@email.com" id="email" class="form-control">
           </div>
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="search">Search</label>
             <input type="search" placeholder="Enter Search Term" id="search" class="form-control">
           </div>
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="text">Number Input</label>
             <input type="number" pattern="[0-9]*" placeholder="Enter a Number" id="text" class="form-control">
           </div>
         </div>
         <div class="grid lap-one-third">
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="textarea1">Textarea</label>
             <textarea placeholder="Enter your message here" cols="40" rows="3" id="textarea1" class="form-control"></textarea>
           </div>
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="textarea2">Readonly Textarea</label>
             <textarea placeholder="Readonly message" cols="40" rows="3" id="textarea2" readonly class="form-control"></textarea>
           </div>
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="textarea3">Disabled Textarea</label>
             <textarea placeholder="Disabled message" cols="40" rows="3" id="textarea3" disabled class="form-control"></textarea>
           </div>
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="select1">Select</label>
             <select id="select1" class="form-control">
               <optgroup label="Option Group">
@@ -385,14 +397,14 @@ title: spaceBase Style Guide
               </optgroup>
             </select>
           </div>
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="select2">Disabled Select</label>
             <select id="select2" disabled class="form-control">
               <option>Option One</option>
               <option>Option Two</option>
             </select>
           </div>
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="multi-select">Multiple Select</label>
             <select id="multi-select" multiple size="4" class="form-control">
               <option>Option 1</option>
@@ -405,28 +417,28 @@ title: spaceBase Style Guide
           </div>
         </div>
         <div class="grid lap-one-third">
-          <div class="sg-field-container">
+          <div class="form-group">
             <label for="file">File input</label>
-            <input type="file" id="file">
+            <input class="form-control-file" type="file" id="file">
           </div>
-          <legend>Checkbox</legend>
-          <ul class="v-list">
-            <li class="checkbox"><label for="checkbox1"><input type="checkbox" checked="checked" name="checkbox" id="checkbox1"> Choice A</label></li>
-            <li class="checkbox"><label for="checkbox2"><input type="checkbox" name="checkbox" id="checkbox2"> Choice B</label></li>
-            <li class="checkbox"><label for="checkbox3"><input type="checkbox" name="checkbox" id="checkbox3"> Choice C</label></li>
-            <li class="checkbox"><label for="checkbox4"><input type="checkbox" name="checkbox" id="checkbox4" disabled> Choice Disabled</label></li>
-            <li class="checkbox has-error"><label for="checkbox5"><input type="checkbox" name="checkbox" id="checkbox5"> Choice Error</label></li>
-            <li class="checkbox has-success"><label for="checkbox6"><input type="checkbox" name="checkbox" id="checkbox6"> Choice Valid</label></li>
-          </ul>
-          <legend>Radio</legend>
-          <ul class="v-list">
-            <li class="radio"><label for="radio1"><input type="radio" checked="checked" name="radio" id="radio1"> Option 1</label></li>
-            <li class="radio"><label for="radio2"><input type="radio" name="radio" id="radio2"> Option 2</label></li>
-            <li class="radio"><label for="radio3"><input type="radio" name="radio" id="radio3"> Option 3</label></li>
-            <li class="radio"><label for="radio4"><input type="radio" name="radio" id="radio4" disabled> Option Disabled</label></li>
-            <li class="radio has-error"><label for="radio5"><input type="radio" name="radio" id="radio5"> Option Error</label></li>
-            <li class="radio has-success"><label for="radio6"><input type="radio" name="radio" id="radio6"> Option Valid</label></li>
-          </ul>
+          <div class="form-group">
+            <legend>Checkbox</legend>
+            <div class="checkbox"><label for="checkbox1"><input type="checkbox" checked="checked" name="checkbox" id="checkbox1"> Choice A</label></div>
+            <div class="checkbox"><label for="checkbox2"><input type="checkbox" name="checkbox" id="checkbox2"> Choice B</label></div>
+            <div class="checkbox"><label for="checkbox3"><input type="checkbox" name="checkbox" id="checkbox3"> Choice C</label></div>
+            <div class="checkbox"><label for="checkbox4"><input type="checkbox" name="checkbox" id="checkbox4" disabled> Choice Disabled</label></div>
+            <div class="checkbox has-error"><label for="checkbox5"><input type="checkbox" name="checkbox" id="checkbox5"> Choice Error</label></div>
+            <div class="checkbox has-success"><label for="checkbox6"><input type="checkbox" name="checkbox" id="checkbox6"> Choice Valid</label></div>
+          </div>
+          <div class="form-group">
+            <legend>Radio</legend>
+            <div class="radio"><label for="radio1"><input type="radio" checked="checked" name="radio" id="radio1"> Option 1</label></div>
+            <div class="radio"><label for="radio2"><input type="radio" name="radio" id="radio2"> Option 2</label></div>
+            <div class="radio"><label for="radio3"><input type="radio" name="radio" id="radio3"> Option 3</label></div>
+            <div class="radio"><label for="radio4"><input type="radio" name="radio" id="radio4" disabled> Option Disabled</label></div>
+            <div class="radio has-error"><label for="radio5"><input type="radio" name="radio" id="radio5"> Option Error</label></div>
+            <div class="radio has-success"><label for="radio6"><input type="radio" name="radio" id="radio6"> Option Valid</label></div>
+          </div>
         </div>
       </div>
     </form>
