hide 'created with' section of site

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ layout: default
     </ul>
   </div>
 </section>
-<section class="created padding">
+<!--<section class="created padding">
   <div class="container">
     <h2 class="h2">Created with spaceBase</h2>
     <ul class="grid-wrapper">
@@ -120,7 +120,7 @@ layout: default
       </li>
     </ul>
   </div>
-</section>
+</section>-->
 <section class="credits">
   <div class="site-wrapper">
     <div class="grid-wrapper grid-wrapper--full">
