--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: default
   </div>
   <div class="content-over-image">
     <h1 class="logo">spaceBase</h1>
-    <p>v 4.0.0</p>
-    <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v4.0.0.zip">Download</a><p>
+    <p>v 4.0.1</p>
+    <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v4.0.1.zip">Download</a><p>
     <p class="github"><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
   </div>
 </section>
@@ -82,7 +82,7 @@ layout: default
       <div class="grid lap-one-half">
         <div class="right padding">
           <ol class="numbers">
-            <li><pre>$ npm install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v4.0.0.zip">download the ZIP</a> and copy its contents into your project folder.</li>
+            <li><pre>$ npm install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v4.0.1.zip">download the ZIP</a> and copy its contents into your project folder.</li>
             <li>Use your favorite Sass compiler to watch changes and compile the files.</li>
             <li>Open scss/_vars.scss to make changes to your global variables.</li>
             <li>Start building out your HTML. We've included index.html and <a href="styleguide.html">styleguide.html</a> to begin with.</li>
@@ -142,7 +142,6 @@ layout: default
             <li><a href="http://getbootstrap.com" target="_blank">Bootstrap</a></li>
             <li><a href="http://necolas.github.io/normalize.css" target="_blank">Normalize.css</a></li>
             <li><a href="http://meyerweb.com/eric/tools/css/reset" target="_blank">Eric Meyer's CSS Reset</a></li>
-            <li><a href="http://www.amazon.com/Golden-Girls-Season-4/dp/B000C1VBAA" target="_blank">The Golden Girls - Season 4</a></li>
           </ul>
         </div>
       </div>
@@ -150,11 +149,11 @@ layout: default
   </div>
 </section>
 <section class="download">
-  <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v4.0.0.zip">Download spaceBase</a><p>
+  <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v4.0.1.zip">Download spaceBase</a><p>
 </section>
 <section class="contribute">
   <div class="container">
-    <p>All are welcome to contribute. <br />Bring your ideas on how we make this better.</p>
+    <p>All are welcome to contribute.</p>
     <ul class="h-list h-list--centered">
       <li class="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-count="none" data-via="space150">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></li>
       <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe></li>
