--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ layout: default
         <div class="right padding">
           <ol class="numbers">
             <li><pre>$ npm install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v4.0.1.zip">download the ZIP</a> and copy its contents into your project folder.</li>
-            <li>Use your favorite Sass compiler to watch changes and compile the files.</li>
+            <li>Use your favorite LibSass compiler to watch changes and compile the files.</li>
             <li>Open scss/_vars.scss to make changes to your global variables.</li>
             <li>Start building out your HTML. We've included index.html and <a href="styleguide.html">styleguide.html</a> to begin with.</li>
             <li>scss/base/ is the core of spaceBase. Build your UI layer in scss/ui/</li>
@@ -97,7 +97,7 @@ layout: default
   <div class="container narrow">
     <h2 class="h2">Customize</h2>
     <ul class="v-list">
-      <li>Compatible with any Sass 3.3 compiler</li>
+      <li>Compatible with any LibSass compiler</li>
       <li>Start with Normalize (default) or CSS Reset</li>
       <li>Scalable, mobile-first grid - choose how robust you want it</li>
       <li>Base font size for mobile vs desktop</li>
@@ -110,13 +110,13 @@ layout: default
     <h2 class="h2">Created with spaceBase</h2>
     <ul class="grid-wrapper">
       <li class="grid lap-one-third">
-        <a href="http://minnetonkamoccasin.com" target="_blank"><img src="images/mm.jpg" alt="Minnetonka Moccasin" /><span>minnetonkamoccasin.com</span></a>
+        <a href=""><img src="" alt="" /><span></span></a>
       </li>
       <li class="grid lap-one-third">
-        <a href="http://pearsonscandy.com" target="_blank"><img src="images/pearsons.jpg" alt="Pearson's Candy" /><span>pearsonscandy.com</span></a>
+        <a href=""><img src="" alt="" /><span></span></a>
       </li>
       <li class="grid lap-one-third">
-        <a href="http://pentair.com" target="_blank"><img src="images/pentair.jpg" alt="Pentair" /><span>pentair.com</span></a>
+        <a href=""><img src="" alt="" /><span></span></a>
       </li>
     </ul>
   </div>
