--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     <h1 class="logo">spaceBase</h1>
     <p>v 4.0.1</p>
     <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v4.0.1.zip">Download</a><p>
-    <p class="github"><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
+    <p class="github"><a href="https://github.com/space150/spaceBase" target="_blank" rel="noopener noreferrer">GitHub</a></p>
   </div>
 </section>
 <section class="intro padding">
@@ -84,7 +84,7 @@ layout: default
           <ol class="numbers">
             <li><pre>$ npm install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v4.0.1.zip">download the ZIP</a> and copy its contents into your project folder.</li>
             <li>Use your favorite LibSass compiler to watch changes and compile the files.</li>
-            <li>Open scss/_vars.scss to make changes to your global variables.</li>
+            <li>Open scss/_vars.scss to update your global variables.</li>
             <li>Start building out your HTML. We've included index.html and <a href="styleguide.html">styleguide.html</a> to begin with.</li>
             <li>scss/base/ is the core of spaceBase. Build your UI layer in scss/ui/</li>
           </ol>
@@ -128,8 +128,7 @@ layout: default
         <div class="figure-on-top">
           <div class="padding">
             <h2 class="h2">Mission Control</h2>
-            <p><a href="http://www.space150.com" target="_blank">space150</a></p>
-            <div class="figure"><img src="images/crew.jpg" alt="space150 software engineers" /></div>
+            <p><a href="http://www.space150.com" target="_blank" rel="noopener noreferrer">space150</a></p>
           </div>
         </div>
       </div>
@@ -137,11 +136,11 @@ layout: default
         <div class="padding">
           <h2 class="h2">Credits</h2>
           <ul class="v-list">
-            <li><a href="https://github.com/csswizardry/inuit.css" target="_blank">Harry Robert's Inuit.css</a></li>
-            <li><a href="https://github.com/sass-mq/sass-mq" target="_blank">Sass MQ</a></li>
-            <li><a href="http://getbootstrap.com" target="_blank">Bootstrap</a></li>
-            <li><a href="http://necolas.github.io/normalize.css" target="_blank">Normalize.css</a></li>
-            <li><a href="http://meyerweb.com/eric/tools/css/reset" target="_blank">Eric Meyer's CSS Reset</a></li>
+            <li><a href="https://github.com/csswizardry/inuit.css" target="_blank" rel="noopener noreferrer">Harry Robert's Inuit.css</a></li>
+            <li><a href="https://github.com/sass-mq/sass-mq" target="_blank" rel="noopener noreferrer">Sass MQ</a></li>
+            <li><a href="http://getbootstrap.com" target="_blank" rel="noopener noreferrer">Bootstrap</a></li>
+            <li><a href="http://necolas.github.io/normalize.css" target="_blank" rel="noopener noreferrer">Normalize.css</a></li>
+            <li><a href="http://meyerweb.com/eric/tools/css/reset" target="_blank" rel="noopener noreferrer">Eric Meyer's CSS Reset</a></li>
           </ul>
         </div>
       </div>
