upgrade spacebase to 4.1.0

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: default
   </div>
   <div class="content-over-image">
     <h1 class="logo">spaceBase</h1>
-    <p>v 4.0.1</p>
-    <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v4.0.1.zip">Download</a><p>
+    <p>v 4.1.0</p>
+    <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v4.1.0.zip">Download</a><p>
     <p class="github"><a href="https://github.com/space150/spaceBase" target="_blank" rel="noopener noreferrer">GitHub</a></p>
   </div>
 </section>
@@ -66,7 +66,7 @@ layout: default
       <li>Common UI components</li>
       <li>Helper classes and mixins</li>
       <li>Cross-browser form controls</li>
-      <li>Supports modern browsers including IE10+</li>
+      <li>Supports modern and legacy browsers including IE10+</li>
     </ul>
   </div>
 </section>
@@ -82,8 +82,8 @@ layout: default
       <div class="grid lap-one-half">
         <div class="right padding">
           <ol class="numbers">
-            <li><pre>$ npm install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v4.0.1.zip">download the ZIP</a> and copy its contents into your project folder.</li>
-            <li>Use your favorite LibSass compiler to watch changes and compile the files.</li>
+            <li><pre>$ npm install spacebase</pre> or <a href="https://github.com/space150/spaceBase/archive/v4.1.0.zip">download the ZIP</a> and copy its contents into your project folder.</li>
+            <li>Use your favorite Sass compiler to watch changes and compile the files.</li>
             <li>Open scss/_vars.scss to update your global variables.</li>
             <li>Start building out your HTML. We've included index.html and <a href="styleguide.html">styleguide.html</a> to begin with.</li>
             <li>scss/base/ is the core of spaceBase. Build your UI layer in scss/ui/</li>
@@ -97,8 +97,7 @@ layout: default
   <div class="container narrow">
     <h2 class="h2">Customize</h2>
     <ul class="v-list">
-      <li>Compatible with any LibSass compiler</li>
-      <li>Start with Normalize (default) or CSS Reset</li>
+      <li>Compatible with any Sass compiler</li>
       <li>Scalable, mobile-first grid - choose how robust you want it</li>
       <li>Base font size for mobile vs desktop</li>
       <li>Global variables for breakpoints, colors, fonts and more</li>
@@ -140,7 +139,6 @@ layout: default
             <li><a href="https://github.com/sass-mq/sass-mq" target="_blank" rel="noopener noreferrer">Sass MQ</a></li>
             <li><a href="http://getbootstrap.com" target="_blank" rel="noopener noreferrer">Bootstrap</a></li>
             <li><a href="http://necolas.github.io/normalize.css" target="_blank" rel="noopener noreferrer">Normalize.css</a></li>
-            <li><a href="http://meyerweb.com/eric/tools/css/reset" target="_blank" rel="noopener noreferrer">Eric Meyer's CSS Reset</a></li>
           </ul>
         </div>
       </div>
@@ -148,15 +146,15 @@ layout: default
   </div>
 </section>
 <section class="download">
-  <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v4.0.1.zip">Download spaceBase</a><p>
+  <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v4.1.0.zip">Download spaceBase</a><p>
 </section>
 <section class="contribute">
   <div class="container">
     <p>All are welcome to contribute.</p>
     <ul class="h-list h-list--centered">
       <li class="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-count="none" data-via="space150">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></li>
-      <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe></li>
-      <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe></li>
+      <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=watch" allowtransparency="true" frameborder="0" scrolling="0" width="66" height="20"></iframe></li>
+      <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=fork" allowtransparency="true" frameborder="0" scrolling="0" width="66" height="20"></iframe></li>
     </ul>
   </div>
 </section>
